@@ -2,7 +2,7 @@
 //
 // Reference.h: Rcpp R/C++ interface class library -- Reference class objects
 //
-// Copyright (C) 2010 - 2015  Dirk Eddelbuettel and Romain Francois
+// Copyright (C) 2010 - 2019  Dirk Eddelbuettel and Romain Francois
 //
 // This file is part of Rcpp.
 //
@@ -58,7 +58,8 @@ namespace Rcpp{
          */
         Reference_Impl( const std::string& klass ) {
             SEXP newSym = Rf_install("new");
-            Shield<SEXP> call( Rf_lang2( newSym, Rf_mkString( klass.c_str() ) ) );
+            Shield<SEXP> str(Rf_mkString(klass.c_str()));
+            Shield<SEXP> call(Rf_lang2(newSym, str));
             Storage::set__( Rcpp_fast_eval( call , Rcpp::internal::get_Rcpp_namespace()) );
         }
 
